--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
                 <div class="presentacion">
                     <p class="bienvenida">Bienvenidos</p>
                     <h2>Soy <span>Yoel Larrosa</span>, Desarrollador Web</h2>
-                    <p class="description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur eaque quos amet impedit recusandae. Blanditiis excepturi placeat nostrum, cum eligendi odit quasi repellat doloremque aperiam maiores asperiores minus error laborum.</p>
+                    <p class="description">Desarrollador Web Full Stack dedicado, con el talento para crear soluciones funcionales en el menor tiempo posible.
+                        Incursionando en el mundo de las tecnologías, pero con una solida experiencia en el estudio estructurado y las habilidades de comunicación para buscar nuevas ideas y debatirlas con el fin de siempre estar en crecimiento.
+                    </p></br><p>Veo el desarrollo web como una puerta de entrada al mundo de las tecnologías, para desarrollar el pensamiento lógico y en una segunda etapa poder volcarme a nuevas ramas del desarrollo de software.</p>
                     <a href="#portfolio">Ir a Portfolio</a>
                 </div>
             </div>
