--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                             <ul id="links">
                             <li><a href="#inicio" class="" onclick="seleccionar(this)">INICIO</a></li>
                             <li><a href="#sobremi" class="" onclick="seleccionar(this)">SOBRE MI</a></li>
-                            <li><a href="#servicios" class="" onclick="seleccionar(this)">SERVICIOS</a></li>
+                            <li><a href="#servicios" class="" onclick="seleccionar(this)">TECH SKILLS</a></li>
                             <li><a href="#portfolio" class="" onclick="seleccionar(this)">PORTFOLIO</a></li>
                             <li><a href="#contacto" class="" onclick="seleccionar(this)">CONTACTO</a></li>
                             </ul>
@@ -35,9 +35,8 @@
 
                         <!-- Iconos de las redes sociales -->
                         <div class="redes">
-                            <a href="#"><i class="fa-brands fa-github"></i></a>
-                            <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                            <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+                            <a href="https://github.com/KarmaUnder"><i class="fa-brands fa-github"></i></a>
+                            <a href="https://www.linkedin.com/in/yoel-larrosa-892046217/"><i class="fa-brands fa-linkedin"></i></a>
                         </div>
                     </div>
                 </header>
@@ -60,177 +59,200 @@
                 <p class="titulo-seccion">Sobre Mi</p>
                 <h2>Hola, soy <span>Yoel Larrosa</span></h2>
                 <h3>Desarrollador Web</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit ab tempora cumque soluta odit error dolores natus iure cum consectetur! Itaque quo aliquam labore. Illo laudantium libero beatae harum excepturi?</p>
-                <a href="#">Descargar CV</a>
+                <p> Si estas buscando una persona constante, adaptable y con las habilidades de crear nuevas soluciones a través de la investigación, el debate y la comunicación estas en el perfil ideal, te invito a revisar mi CV y comunicarte conmigo.</p>
+                <a href="https://drive.google.com/file/d/1evrE4ZnCtDUubaxE64PHsi6yYaysiJXg/view">Descargar CV</a>
             </div>
         </section>
         <!-- SECCION SERVICIOS-->
         <section id="servicios">
-            <h3 class="titulo-seccion">MIS SERVICIOS</h3>
+            <h3 class="titulo-seccion">TECH SKILLS</h3>
             <div class="fila">
                 <div class="servicio">
-                    <span class="icono"><i class="fa-solid fa-code"></i></span>
-                    <h4>Diseño de Sitios Web</h4>
-                    <hr>
-                    <ul class="servicios-tag">
-                        <li>Web</li>
-                        <li>Graphic</li>
-                        <li>SEO</li>
-                    </ul>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat placeat magni iure, repudiandae exercitationem maxime enim. Facere mollitia, officia error voluptates rem illo vel dolor cum, voluptatum earum quia eaque!</p>
+                    <div class="info">
+                        <h4>Java Script</h4>
+                        <p>Desarrollo Full Stack</p>
+                    </div>
+                    <img src="img/js-logo.png" alt="">
                 </div>
                 <div class="servicio">
-                    <span class="icono"><i class="fa-solid fa-code"></i></span>
-                    <h4>Diseño de Sitios Web</h4>
-                    <hr>
-                    <ul class="servicios-tag">
-                        <li>Web</li>
-                        <li>Graphic</li>
-                        <li>SEO</li>
-                    </ul>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat placeat magni iure, repudiandae exercitationem maxime enim. Facere mollitia, officia error voluptates rem illo vel dolor cum, voluptatum earum quia eaque!</p>
+                    <img src="img/ts-logo.png" alt="">
+                    <div class="info">
+                        <h4>Type Script</h4>
+                        <p>Desarrollo Full Stack</p>
+                    </div>
                 </div>
                 <div class="servicio">
-                    <span class="icono"><i class="fa-solid fa-code"></i></span>
-                    <h4>Diseño de Sitios Web</h4>
-                    <hr>
-                    <ul class="servicios-tag">
-                        <li>Web</li>
-                        <li>Graphic</li>
-                        <li>SEO</li>
-                    </ul>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat placeat magni iure, repudiandae exercitationem maxime enim. Facere mollitia, officia error voluptates rem illo vel dolor cum, voluptatum earum quia eaque!</p>
+                    <img src="img/bootstrap-logo.png" alt="">
+                    <div class="info">
+                        <h4>Bootstrap</h4>
+                        <p>Diseño de sitios y aplicaciones</p>
+                    </div>
+                </div>
+                <div class="servicio">
+                    <img src="img/next-logo.png" alt="">
+                    <div class="info">
+                        <h4>Next.js</h4>
+                        <p>Desarrolo de aplicaciones</p>
+                    </div>
                 </div>
             </div>
             <div class="fila">
                 <div class="servicio">
-                    <span class="icono"><i class="fa-solid fa-code"></i></span>
-                    <h4>Diseño de Sitios Web</h4>
-                    <hr>
-                    <ul class="servicios-tag">
-                        <li>Web</li>
-                        <li>Graphic</li>
-                        <li>SEO</li>
-                    </ul>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat placeat magni iure, repudiandae exercitationem maxime enim. Facere mollitia, officia error voluptates rem illo vel dolor cum, voluptatum earum quia eaque!</p>
+                    <img src="img/react-logo.png" alt="">
+                    <div class="info">
+                        <h4>React js</h4>
+                        <p>Desarrolo Front End</p>
+                    </div>
                 </div>
                 <div class="servicio">
-                    <span class="icono"><i class="fa-solid fa-code"></i></span>
-                    <h4>Diseño de Sitios Web</h4>
-                    <hr>
-                    <ul class="servicios-tag">
-                        <li>Web</li>
-                        <li>Graphic</li>
-                        <li>SEO</li>
-                    </ul>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat placeat magni iure, repudiandae exercitationem maxime enim. Facere mollitia, officia error voluptates rem illo vel dolor cum, voluptatum earum quia eaque!</p>
+                    <img src="img/redux-logo.png" alt="">
+                    <div class="info">
+                        <h4>Redux</h4>
+                        <p>Manejo de estados en React</p>
+                    </div>
                 </div>
                 <div class="servicio">
-                    <span class="icono"><i class="fa-solid fa-code"></i></span>
-                    <h4>Diseño de Sitios Web</h4>
-                    <hr>
-                    <ul class="servicios-tag">
-                        <li>Web</li>
-                        <li>Graphic</li>
-                        <li>SEO</li>
-                    </ul>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat placeat magni iure, repudiandae exercitationem maxime enim. Facere mollitia, officia error voluptates rem illo vel dolor cum, voluptatum earum quia eaque!</p>
+                    <img src="img/node-logo.png" alt="">    
+                    <div class="info">
+                        <h4>Node js</h4>
+                        <p>Desarrollo de servidor</p>
+                    </div> 
+                </div>
+                <div class="servicio">
+                    <img src="img/postgres-logo.png" alt="">
+                    <div class="info">
+                        <h4>Postgres</h4>
+                        <p>Manejo de Base de Datos</p>
+                    </div>
+                </div>
+            </div>
+            <div class="fila">
+                <div class="servicio">
+                <img src="img/html-logo.png" alt="">
+                <div class="info">
+                    <h4>HTML</h4>
+                    <p>Diseño Web</p>
+                </div>
+             </div>
+                <div class="servicio">
+                    <img src="img/css-logo.png" alt="">
+                    <div class="info">
+                        <h4>CSS</h4>
+                        <p>Diseño Web</p>
+                    </div>
+                </div>
+                <div class="servicio">
+                    <img src="img/less-logo.png" alt="">
+                    <div class="info">
+                        <h4>LESS</h4>
+                        <p>Diseño Web</p>
+                    </div>
+                </div>
+                <div class="servicio">
+                    <img src="img/sass-logo.png" alt="">
+                    <div class="info">
+                        <h4>SASS</h4>
+                        <p>Diseño Web</p>
+                    </div>
+                </div>
+            </div>
+            <div class="fila">
+                <div class="servicio">
+                <img src="img/php-logo.png" alt="">
+                <div class="info">
+                    <h4>PHP</h4>
+                    <p>Desarrollo Full Stack</p>
+                </div>
+             </div>
+                <div class="servicio">
+                    <img src="img/laravel-logo.png" alt="">
+                    <div class="info">
+                        <h4>Laravel</h4>
+                        <p>Desarrollo Full Stack</p>
+                    </div>
+                </div>
+                <div class="servicio">
+                    <img src="img/csharp-logo.png" alt="">
+                    <div class="info">
+                        <h4>C#</h4>
+                        <p>Desarrollo en Unity</p>
+                    </div>
+                </div>
+                <div class="servicio">
+                    <img src="img/mongo-logo.png" alt="">
+                    <div class="info">
+                        <h4>Mongo DB</h4>
+                        <p>Manejo de Base de Datos</p>
+                    </div>
                 </div>
             </div>
         </section>
-        <!--SECCION SKILS-->
-       <div class="contenedor-skills" id="skills">
-        <h3>HABILIDADES</h3>
-        <div class="skill">
-            <div class="info">
-                <p><span class="lista"></span>Html & Css</p>
-                <span class="porcentaje">95%</span>
-            </div>
-            <div class="barra">
-                <div id="html" class=""></div>
-            </div>
-        </div>
-        <div class="skill">
-            <div class="info">
-                <p><span class="lista"></span>JavaScript</p>
-                <span class="porcentaje">100%</span>
-            </div>
-            <div class="barra">
-                <div id="js" class=""></div>
-            </div>
-        </div>
-        <div class="skill">
-            <div class="info">
-                <p><span class="lista"></span>Base de Datos</p>
-                <span class="porcentaje">95%</span>
-            </div>
-            <div class="barra">
-                <div id="bd" class=""></div>
-            </div>
-        </div>
-        <div class="skill">
-            <div class="info">
-                <p><span class="lista"></span>Photoshop</p>
-                <span class="porcentaje">90%</span>
-            </div>
-            <div class="barra">
-                <div id="ps" class=""></div>
-            </div>
-        </div>
-       </div>
+      
        <!--SECCION PORTAFOLIO-->
        <section id="portfolio">
-        <h3 class="titulo-seccion">MIS PROYECTOS</h3>
+        <h3 class="titulo-seccion">ALGUNOS PROYECTOS</h3>
         <div class="fila">
             <div class="proyecto">
                 <div class="overlay"></div>
-                <img src="img/proyecto1.jpg" alt="">
-                <div class="info">
-                    <h4>Descripcion del Proyecto</h4>
-                    <p>Diseño Web</p>
-                </div>
+                <a href="https://github.com/globalmark/globalMarkets13">
+                    <img src="img/proyecto1.png" alt="">
+                    <div class="info">
+                        <h4>Ecommerce Global Market</h4>
+                        <p>Proyecto Ecommerce hecho en Next.js donde puedes comprar todo tipo de articulos.</p>
+                    </div>
+                </a>
             </div>
                 <div class="proyecto">
                     <div class="overlay"></div>
-                    <img src="img/proyecto2.jpg" alt="">
-                    <div class="info">
-                        <h4>Descripcion del Proyecto</h4>
-                        <p>Diseño Web</p>
-                    </div>
+                    <a href="https://github.com/KarmaUnder/Foods-Api">
+                        <img src="img/proyecto2.png" alt="">
+                        <div class="info">
+                            <h4>Foods API</h4>
+                            <p>Aplicacion hecha en React para la busqueda y publicacion de recetas de comida</p>
+                        </div>
+                    </a>
                 </div>
                 <div class="proyecto">
                     <div class="overlay"></div>
-                    <img src="img/proyecto3.jpg" alt="">
-                    <div class="info">
-                        <h4>Descripcion del Proyecto</h4>
-                        <p>Diseño Web</p>
-                    </div>
+                    <a href="https://github.com/KarmaUnder/Pokemon-API/tree/main/PI-Pokemon-main">
+                        <img src="img/proyecto3.png" alt="">
+                        <div class="info">
+                            <h4>Pokemon API</h4>
+                            <p>Aplicacion hecha en React estilo pokedex, donde puedes buscar informacion de cada Pokemon</p>
+                        </div>
+                    </a>
                 </div>
         </div>
         <div class="fila">
             <div class="proyecto">
                 <div class="overlay"></div>
-                <img src="img/proyecto4.jpg" alt="">
-                <div class="info">
-                    <h4>Descripcion del Proyecto</h4>
-                    <p>Diseño Web</p>
-                </div>
+                <a href="https://github.com/KarmaUnder/RPGProyect"> 
+                    <img src="img/proyecto4.png" alt="">
+                    <div class="info">
+                        <h4>Demo Videojuego</h4>
+                        <p>Videojuego RPG Demo hecho en Unity con C#</p>
+                    </div>
+                </a>
             </div>
                 <div class="proyecto">
                     <div class="overlay"></div>
-                    <img src="img/proyecto5.jpg" alt="">
+                    <a href="https://github.com/KarmaUnder/PHP-Laravel-CRUD-De-Empleados"> 
+                    <img src="img/proyecto5.png" alt="">
                     <div class="info">
-                        <h4>Descripcion del Proyecto</h4>
-                        <p>Diseño Web</p>
+                        <h4>CRUD de empleados Laravel</h4>
+                        <p>CRUD de Empleados en PHP Laravel con Login, para administrar y registrar nuevos empelados</p>
                     </div>
+                    </a>
                 </div>
                 <div class="proyecto">
                     <div class="overlay"></div>
-                    <img src="img/proyecto6.jpg" alt="">
+                    <a href="https://github.com/KarmaUnder/PHP-Laravel-CRUD-De-Empleados"> 
+                    <img src="img/proyecto6.png" alt="">
                     <div class="info">
-                        <h4>Descripcion del Proyecto</h4>
-                        <p>Diseño Web</p>
+                        <h4>Portfolio en PHP</h4>
+                        <p>Portfolio desarrollado en PHP, Con CRUD para insertar nuevos proyectos e eliminar antiguos</p>
                     </div>
+                    </a>
                 </div>
         </div>
        </section>
@@ -251,14 +273,13 @@
         </div>
        </section>
        <!--SECCION FOOTER-->
-       <footer>
-        <p>Todos los derechos reservados -2022</p>
-        <div class="redes">
-            <a href="#"><i class="fa-brands fa-github"></i></a>
-            <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-            <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
-        </div>
-       </footer>
+           <footer>
+               <p>Todos los derechos reservados -2022</p>
+               <div class="redes">
+                   <a class ="github" href="https://github.com/KarmaUnder"><i class="fa-brands fa-github"></i></a>
+                   <a href="https://www.linkedin.com/in/yoel-larrosa-892046217/"><i class="fa-brands fa-linkedin"></i></a>
+                </div>
+            </footer>
        <script src="script.js"></script>
     </body>
 </html>
