--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             <div class="proyecto">
                 <div class="overlay"></div>
                 <a href="https://github.com/globalmark/globalMarkets13">
-                    <img src="img/proyecto1.png" alt="">
+                    <img src="img/proyecto1a.png" alt="">
                     <div class="info">
                         <h4>Ecommerce Global Market</h4>
                         <p>Proyecto Ecommerce hecho en Next.js donde puedes comprar todo tipo de articulos.</p>
@@ -237,7 +237,7 @@
                 <div class="proyecto">
                     <div class="overlay"></div>
                     <a href="https://github.com/KarmaUnder/PHP-Laravel-CRUD-De-Empleados"> 
-                    <img src="img/proyecto5.png" alt="">
+                    <img src="img/proyecto5a.png" alt="">
                     <div class="info">
                         <h4>CRUD de empleados Laravel</h4>
                         <p>CRUD de Empleados en PHP Laravel con Login, para administrar y registrar nuevos empelados</p>
@@ -247,7 +247,7 @@
                 <div class="proyecto">
                     <div class="overlay"></div>
                     <a href="https://github.com/KarmaUnder/PHP-Laravel-CRUD-De-Empleados"> 
-                    <img src="img/proyecto6.png" alt="">
+                    <img src="img/proyecto6a.png" alt="">
                     <div class="info">
                         <h4>Portfolio en PHP</h4>
                         <p>Portfolio desarrollado en PHP, Con CRUD para insertar nuevos proyectos e eliminar antiguos</p>
